--- a/students/NeshcheretEA/calc.html
+++ b/students/NeshcheretEA/calc.html
@@ -4,11 +4,13 @@
 <head>
   <title>Калькулятор</title>
   <link rel="stylesheet" href="calc.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <script type="text/javascript" src="js/script.js"></script>
   <meta charset="utf-8">
 </head>
 
 <body>
-  <button class="change_theme">Switch color</button> <!-- Не знаю как сделать сохранение при обновлении, нашел такой способ -->
+  <button type="button" class="btn btn-light" id="change_theme">Black</button>
   <script type="text/javascript">
     if (localStorage.getItem('theme') === null) {
       localStorage.setItem('theme', "white");
@@ -18,9 +20,13 @@
     function(){
     if (localStorage.getItem('theme') === "white") {
       document.querySelector("body").style.background = "black";
+      document.getElementById("change_theme").textContent = "White";
+      document.getElementById("change_theme").className = "btn btn-light";
       localStorage.setItem('theme', "black");
      } else {
       document.querySelector("body").style.background = "white";
+      document.getElementById("change_theme").textContent = "Black";
+      document.getElementById("change_theme").className = "btn btn-dark";
       localStorage.setItem('theme', "white");
      }
     });
