--- a/students/NeshcheretEA/Lab2/calc.html
+++ b/students/NeshcheretEA/Lab2/calc.html
@@ -10,29 +10,39 @@
 </head>
 
 <body>
-<button type="button" class="btn btn-light" id="change_theme">Black</button>
-<script type="text/javascript">
-    if (localStorage.getItem('theme') === null) {
-        localStorage.setItem('theme', "white");
-    }
-    document.querySelector("body").style.background = localStorage.getItem('theme');
-    document.getElementById("change_theme").className = localStorage.getItem('theme') === 'white' ? 'btn btn-dark' : 'btn btn-light'
-    document.querySelector("button").addEventListener("click",
-        function () {
-            if (localStorage.getItem('theme') === "white") {
-                document.querySelector("body").style.background = "black";
-                document.getElementById("change_theme").textContent = "White";
-                document.getElementById("change_theme").className = "btn btn-light";
-                localStorage.setItem('theme', "black");
-            } else {
-                document.querySelector("body").style.background = "white";
-                document.getElementById("change_theme").textContent = "Black";
-                document.getElementById("change_theme").className = "btn btn-dark";
-                localStorage.setItem('theme', "white");
-            }
-        });
-</script>
 <div class="main_window">
+    <div class="container">
+        <header class="d-flex justify-content-center py-3">
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+                <button type="button" class="btn btn-light" id="change_theme">Black</button>
+                <script type="text/javascript">
+                    let root = document.documentElement;
+                    if (localStorage.getItem('theme') === null) {
+                        localStorage.setItem('theme', "white");
+                    }
+                    document.querySelector("body").style.background = localStorage.getItem('theme');
+                    document.getElementById("change_theme").className = localStorage.getItem('theme') === 'white' ? 'btn btn-dark' : 'btn btn-light'
+                    document.querySelector("button").addEventListener("click",
+                        function () {
+                            if (localStorage.getItem('theme') === "white") {
+                                document.querySelector("body").style.background = "black";
+                                root.style.setProperty('--bs-secondary-color', 'white')
+                                document.getElementById("change_theme").textContent = "White";
+                                document.getElementById("change_theme").className = "btn btn-light";
+                                localStorage.setItem('theme', "black");
+                            } else {
+                                document.querySelector("body").style.background = "white";
+                                document.getElementById("change_theme").textContent = "Black";
+                                root.style.setProperty('--bs-secondary-color', 'black')
+                                document.getElementById("change_theme").className = "btn btn-dark";
+                                localStorage.setItem('theme', "white");
+                            }
+                        });
+                </script>
+            </ul>
+        </header>
+    </div>
     <!-- div - это базовый html-контейнер, который может содержать в себе другие html-элементы. -->
     <!-- блок с экраном калькулятора, где будет выводиться результат вычислений. -->
     <div id="result" class="result">
@@ -77,7 +87,11 @@
             <button id="btn_op_equal" class="my-btn primary execute">=</button>
         </div>
     </div>
-    <div class="basement">ЛР выполнена Нещеретом Е.А.</div>
 </div>
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+        <span class="mb-3 mb-md-0 text-body-secondary">© ЛР выполнена Нещеретом Е.А.</span>
+    </div>
+</footer>
 </body>
 </html>
